# recipes_django

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
config/: settings.py  urls.py  wsgi.py
recipes/users/: apps.py  models.py
