[tool.poetry]
name = "recipes_django"
version = "0.1.0"
description = ""
authors = ["Simone Rosani <rsn.smn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
requests = "^2.27.1"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
djangorestframework-simplejwt = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
isort = "^5.10.1"
mypy = "^0.960"
pre-commit = "^2.19.0"
pyupgrade = "^2.32.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
